@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-01T16:27:35Z",
-  "count_outdated" : 1053,
-  "uniques_outdated" : 272,
+  "timestamp" : "2022-04-03T01:23:48Z",
+  "count_outdated" : 1082,
+  "uniques_outdated" : 278,
   "count" : 1734,
   "uniques" : 316,
   "clones" : [
-    {
-      "timestamp": "2022-03-19T00:00:00Z",
-      "count": 29,
-      "count_minmax": [ 29, 29 ],
-      "uniques": 6,
-      "uniques_minmax": [ 6, 6 ]
-    },
     {
       "timestamp": "2022-03-21T00:00:00Z",
       "count": 51,
