@@ -1,12 +1,7 @@
 {
-  "count": 681,
-  "uniques": 27,
+  "count": 652,
+  "uniques": 24,
   "clones": [
-    {
-      "timestamp": "2022-03-19T00:00:00Z",
-      "count": 29,
-      "uniques": 6
-    },
     {
       "timestamp": "2022-03-21T00:00:00Z",
       "count": 51,
