@@ -1,3 +1,9 @@
+2022-04-03T01:23:48Z:
+* notice: last 14d: all unq: 652 24
+* notice: prev accum: outdated-all outdated-unq / all unq: 1053 272 / 1734 316
+* notice: next accum: outdated-all outdated-unq / all unq: 1082 278 / 1734 316
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -0 -0
+
 2022-04-01T16:27:35Z:
 * notice: last 14d: all unq: 681 27
 * notice: prev accum: outdated-all outdated-unq / all unq: 1034 265 / 1734 316
